# SonicEngine

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  file_format_spec.txt  makefile
.zed/: debug.json  settings.json  tasks.json
include/: math  rt  sonic
map/: .gitignore  README.md  angles.tsx  collision.tsx  map.tmx  package.json  solidity.tsx  tiles.tsx
map/extensions/: sonic.mjs
map/objects/: Chopper.tx  MotoBug.tx  Ring.tx  Sonic.tx
mod/Core/: CMakeLists.txt  README.md
mod/Core/include/: core  core::draw  core::match  core::range
mod/Core/src/: Array.hpp  Heap.hpp  Match.hpp  Math.hpp  Primitive.hpp  Range.hpp  Utility.hpp
mod/Core/src/draw/: Color.hpp  Drawable.hpp  Image.hpp
mod/CoreGame/: CMakeLists.txt  README.md
mod/CoreGame/src/: Context.hpp  Game.cpp  Game.hpp
mod/Prog2Engine/: CMakeLists.txt  README.md
mod/Prog2Engine/include/: prog
mod/Prog2Engine/old/: BaseGame.cpp  BaseGame.h  Engine.vcxproj  Engine.vcxproj.filters  Matrix2x3.cpp  Matrix2x3.h  Prog2Engine.sln  SVGParser.cpp  SVGParser.h  SoundEffect.cpp  SoundEffect.h  SoundStream.cpp  SoundStream.h  Texture.cpp  Texture.h  Transform.h  Vector2f.cpp  Vector2f.h  base.h  structs.cpp  structs.h  utils.cpp  utils.h
mod/Prog2Engine/src/: Context.cpp  Game.cpp
object/: Sonic.cpp  Sonic.hpp
object/animal/: Animal.hpp
object/badnik/: MotoBug.cpp  MotoBug.hpp
object/friendly/: Animal.cpp  Animal.hpp
object/hostile/: BlueNewtron.cpp  BlueNewtron.hpp  BuzzBomber.cpp  BuzzBomber.hpp  Chopper.cpp  Chopper.hpp  Crabmeat.cpp  Crabmeat.hpp  GreenNewtron.cpp  GreenNewtron.hpp  MotoBug.hpp  Spike.cpp  Spike.hpp
object/misc/: LayerSwitch.cpp  Ring.hpp  Spring.cpp  Spring.hpp
object/pickup/: Monitor.cpp  Monitor.hpp  Ring.cpp  Ring.hpp
object/stage/: Checkpoint.cpp  Checkpoint.hpp  Goal.cpp  Goal.hpp  LayerSwitch.hpp
object/terrain/: CollapsingCliff.cpp  CollapsingCliff.hpp  LogBridge.cpp  LogBridge.hpp  MovingPlatform.cpp  MovingPlatform.hpp
res/: 1-1.stage  angles.tga  collision.tga  solidity.tga  sonicfont.tga  tilemap.tga
src/: main.cpp
src/draw/: Color.hpp  Drawable.hpp  Image.hpp  Text.hpp  color.hpp  drawable.hpp  image.hpp  plane.hpp  text.hpp
src/fmt/: fmt.hpp
src/font/: fonts.hpp
src/include/: draw  font  math  primitive  rt  sonic
src/io/: io.hpp
src/math/: Angle.hpp  Point.hpp  angle.hpp  point.hpp
src/primitive/: Box.hpp  Fixed.hpp  Primitive.hpp  box.hpp  fixed.hpp  primitive.hpp
src/rt/: AudioContext.hpp  File.hpp  Game.hpp  file.hpp  game.hpp  io.hpp  stream.hpp
src/sonic/: Entity.hpp  Fixed.hpp  Object.cpp  Object.hpp  Scene.hpp  Stage.hpp  Tile.hpp  animator.hpp  class_loader.hpp  dynobject.hpp  object.cpp  object.hpp  scene.hpp  stage.hpp
src/sonic/runtime/: AudioContext.hpp  Game.hpp
tools/: generate  trig_table.py
windows/: toolchain.cmake
